RESOLVED FIXED233229
Fix formatting and string literals in FileInputType.cpp
https://bugs.webkit.org/show_bug.cgi?id=233229
Summary Fix formatting and string literals in FileInputType.cpp
Andreu Botella
Reported 2021-11-16 18:05:28 PST
Fix formatting and string literals in FileInputType.cpp
Attachments
Patch (2.49 KB, patch)
2021-11-16 18:09 PST, Andreu Botella
no flags
Patch (2.46 KB, patch)
2021-11-17 08:12 PST, Andreu Botella
no flags
Andreu Botella
Comment 1 2021-11-16 18:09:12 PST
Chris Dumez
Comment 2 2021-11-17 07:19:15 PST
Comment on attachment 444463 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=444463&action=review > Source/WebCore/html/FileInputType.cpp:185 > + auto file = File::create(document, Blob::create(document, { }, WebCore::defaultMIMEType()), emptyString()); Is "WebCore::" really needed?
Andreu Botella
Comment 3 2021-11-17 08:12:04 PST
EWS
Comment 4 2021-11-17 09:27:41 PST
Committed r285932 (244341@main): <https://commits.webkit.org/244341@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 444524 [details].
Radar WebKit Bug Importer
Comment 5 2021-11-17 09:28:21 PST
Note You need to log in before you can comment on or make changes to this bug.