Fix formatting and string literals in FileInputType.cpp https://bugs.webkit.org/show_bug.cgi?id=233229

Patch by Andreu Botella <andreu@andreubotella.com> on 2021-11-17
Reviewed by Darin Adler.

This change uses the emptyString() and defaultMIMEType() functions rather than using string
literals, fixes the coding style, and reverts an unnecessary change in the comments.

This fixes code review suggestions from https://bugs.webkit.org/show_bug.cgi?id=185416 and
https://bugs.webkit.org/show_bug.cgi?id=221549

* html/FileInputType.cpp:
(WebCore::FileInputType::appendFormData const):


Canonical link: https://commits.webkit.org/244341@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@285932 268f45cc-cd09-0410-ab3c-d52691b4dbfc